src/test/deca/codegen/valid/provided/debordement.deca
{

//int x;
//x  = 10000000*223333333;
//float y = 1555555555555555555555555555555555.23666666666666666666666666666666666666666666666666666666666666666666678666666666666666666666666666666666666666666666*1555555555555555555555555555555555.23666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666936;
//print(x);
int x = 58/0;


}
