src/test/deca/codegen/invalid/improvided/resteDivisionZero.deca


{
 int x =0;
 int y = 5%x;



}
